# cadence

./: Cargo.toml
apps/cadence-desktop/: Cargo.toml  tauri.conf.json
apps/cadence-desktop/src/: main.rs
core/cadence-core/: Cargo.toml
core/cadence-core/src/: lib.rs
tools/cadence-cli/src/: main.rs
