[package]
name = "cadence-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
cadence-core = { path = "../../core/cadence-core" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.8.3", features = ["dialog-open"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
